2008-12-18  higepon  <higepon@users.sourceforge.jp>

        * Added (define-insn REFER_LOCAL_BRANCH_NOT_NULL 2).

        * Added (define-insn REFER_LOCAL_PUSH_CONSTANT_BRANCH_NOT_LE 3)
                (define-insn REFER_LOCAL_PUSH_CONSTANT_BRANCH_NOT_GE 3)
                (define-insn REFER_LOCAL_PUSH_CONSTANT_BRANCH_NOT_NUMBER_EQUAL 3)

        * Added graph.

2008-12-17  higepon  <higepon@users.sourceforge.jp>

        * VM.cpp (run): Removed NUMBER_LE_TEST and REFER_LOCAL0_EQV_TEST.

        * CompilerProcedures.cpp (pass4FixupLabel): Added peep hole optimization for instructions below.

        * VM.cpp : Added new Instructions BRANCH_NOT_(LE|LT|GE|GT).
                   Added BRANCH_NOT_NULL, BRANCH_NOT_NUMBER_EQUAL, BRANCH_NOT_EQ, BRANCH_NOT_EQV and BRANCH_NOT_EQUAL.

2008-12-16  higepon  <higepon@users.sourceforge.jp>

        * CodeBuilder.cpp (CodeBuilder::combineInstructionsArgument1): Enabled REFER_GLOBAL_CALL.

2008-12-15  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass3/$if): Omit the jump after then clause.
                       (pass2/$if): Omit "if" when (if const then else) appears.
                       (pass3/$if): (if a b #f) => (if a b IT).

2008-12-14  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (parse-lambda-vars): Return values.
                       (lambda-has-define?): Rewrote.
                       (pass1/cond->iform): Added cond expansion.
                       (pass2/$if): Ported pass2/$if from Gauche.

        * Removed library support which is not used.

2008-12-13  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass1/call): Fixed tail? flag for arguments of $call.
                       (pass3/$if): optimization for (if (not x) a b) => (if x b a).

        * VM.cpp (VM_ASSERT): Added VM_ASSERT. It shows dc and cl register.

        * CompilerProcedures.cpp (findSetsLabel): Fixed findSets for searching in $LABEL.
