@@ -124,4 +124,5 @@
 (define-insn REFER_LOCAL_PUSH_CONSTANT_BRANCH_NOT_GE 3)
 (define-insn REFER_LOCAL_PUSH_CONSTANT_BRANCH_NOT_NUMBER_EQUAL 3)
 (define-insn REFER_LOCAL_BRANCH_NOT_NULL 2)
+(define-insn REFER_LOCAL_BRANCH_NOT_LT 2)
 
