@@ -1,5 +1,5 @@
 // Do not edit this file generated by ./scripts/gen-label.scm
-static void* dispatch_table[4046] = {
+static void* dispatch_table[4078] = {
 &&LABEL_DEFAULT,
 &&LABEL_DEFAULT,
 &&LABEL_DEFAULT,
@@ -4015,4 +4015,36 @@ static void* dispatch_table[4046] = {
 &&LABEL_DEFAULT,
 &&LABEL_DEFAULT,
 &&LABEL_REFER_LOCAL_BRANCH_NOT_NULL,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_DEFAULT,
+&&LABEL_REFER_LOCAL_BRANCH_NOT_LT,
 };
